--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -154,7 +154,7 @@ social_icons:
 # Sidebar Avatar
 # in theme directory(source/images): /images/avatar.jpg
 # in site  directory(source/uploads): /uploads/avatar.jpg
-#avatar:
+avatar: /images/bio.png
 
 
 # Table Of Contents in the Sidebar
