--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Technical Blog
 subtitle: Welcome to my world!
 description: [专注于分布式技术架构、IoT云计算平台及大数据分析]
 author: Xi Ning Wang
-language: zh-CN
+language: zh-Hans
 timezone: Asia/Shanghai
 
 # URL
