--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Technical Blog
 subtitle: Welcome to my world!
-description: [专注于分布式技术架构、IoT云计算平台及大数据分析]
+description: [专注于分布式技术架构、认知IoT云平台]
 author: Xi Ning Wang
 language: zh-Hans
 timezone: Asia/Shanghai
