--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Technical Blog
 subtitle: Welcome to my world!
-description: [专注于分布式高性能技术架构、IoT云平台、机器/深度学习]
+description: [专注于分布式高性能技术架构、IoT云平台、机器/深度学习]有问题请mailto: osswangxining@163.com
 author: Xi Ning Wang
 language: zh-Hans
 timezone: Asia/Shanghai
