--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,20 @@ permalink_defaults:
 
 # Code highlight theme
 # available: normal | night | night eighties | night blue | night bright
-highlight_theme: night bright
+highlight_theme: "night bright"
 scheme: Gemini
 avatar: /images/bio.png
+# Fancybox for image gallery
+fancybox: true
+
+# Specify the date when the site was setup
+since: 2013
+menu:
+    home: /
+    archives: /archives
+    tags: /tags
+    categories: /categories
+
 
 # Fancybox for image gallery
 fancybox: true
