update layout for blog

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -149,7 +149,8 @@ links_title: Links
 links_layout: block
 #links_layout: inline
 links:
-  Title: https://istio.io
+  Istio: https://istio.io
+  gRPC:  https://grpc.io/
 
 # Sidebar Avatar
 # in theme directory(source/images): /images/avatar.gif
@@ -604,7 +605,7 @@ algolia_search:
 # Local search
 # Dependencies: https://github.com/flashlab/hexo-generator-search
 local_search:
-  enable: false
+  enable: true
   # if auto, trigger search by changing input
   # if manual, trigger search by pressing enter key or search button
   trigger: auto
@@ -619,7 +620,7 @@ local_search:
 # External URL with BASE64 encrypt & decrypt.
 # Usage: {% exturl text url "title" %}
 # Alias: {% extlink text url "title" %}
-exturl: false
+exturl: true
 
 # Note tag (bs-callout).
 note:
@@ -628,7 +629,7 @@ note:
   #  - modern    bs-callout new (v2-v3) alert style.
   #  - flat      flat callout style with background, like on Mozilla or StackOverflow.
   #  - disabled  disable all CSS styles import of note tag.
-  style: simple
+  style: modern
   icons: false
   border_radius: 3
   # Offset lighter of background in % for modern and flat styles (modern: -12 | 12; flat: -18 | 6).
