--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Technical Blog
 subtitle: Welcome to my world! 有问题请osswangxining（at）163.com
-description: [专注于分布式高性能技术架构、容器|K8S、IoT云平台, 喜欢用Java(script)|Python|Go]
+description: [专注于分布式高性能技术架构、容器|K8S、IoT云平台，支持语言：Java(script) | Python | Golang]
 author: Xi Ning Wang
 language: zh-Hans
 timezone: Asia/Shanghai
